# onto-med-rag

./: .gitignore  GPU_GITHUB_HANDOFF_PLAN.md  README.md  how-to-query-the-rxnorm-data.ipynb  pyproject.toml  stage1_entity_assertion_linking_design.md  stage1_implementation_plan.md
configs/: base.yaml  baseline_gliner.yaml  gpu_qwen.example.yaml  online_first5.example.yaml
data/: .gitignore  README.md
data/examples/: sample_input.txt  sample_output.json
data/kb/icd10/: concepts.sample.tsv
data/kb/rxnorm/: concepts.sample.tsv
docs/: architecture.md  baseline_decisions.md  problem_definition.md  timeline.md
docs/meetings/: 2026-07-20.md
notebooks/: example_run.ipynb
research/ontology/rdf_owl/: 01-knowledge-graph-overview.tex  02-rdf.tex  03-rdfs-owl.tex  04-owlready2.tex  05-project-application.tex  main.tex
scripts/: zip_submission.sh
src/clinical_nlp/: __init__.py  cli.py  config.py  normalization.py  pipeline.py  schemas.py  text.py
src/clinical_nlp/assertion_detection/: __init__.py  (+1 more)
src/eval/: metrics.py
src/extract/: rules.py
src/kb/: load.py
src/linking/: fuzzy.py
src/pipeline/: pipeline.py  protocols.py
src/schemas/: entity.py  validate.py
tests/: test_linking.py  test_metrics.py  test_pipeline.py  test_rules.py  test_validate.py
tests/integration/: test_golden_medications.py
tests/unit/: test_core.py  test_entity_recovery_types.py  test_icd_catalog_index.py  test_icd_crawler.py  test_llm_parsing.py  test_online_llm.py  test_pipeline_constraints.py  test_qwen_transformers.py  test_rules_assertions.py  test_rxnorm_online.py
(+21 files in other folders)
