[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-nlp"
version = "0.1.0"
description = "Modular Vietnamese clinical entity, assertion, and terminology linking pipeline"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "requests>=2.31",
  "torch",
  "huggingface-hub",
  "torchvision",
  "pillow",
]

[project.optional-dependencies]
models = [
  "gliner>=0.2.22",
  "transformers>=4.57",
  "accelerate>=1.0",
  "bitsandbytes>=0.45",
]
retrieval = [
  "rapidfuzz>=3.9",
  "rank-bm25>=0.2.2",
]
test = ["pytest>=8"]

[project.scripts]
clinical-nlp = "clinical_nlp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

